tests/cases/compiler-development/artifact/errors/diagnostic-union-by-duplicate-arm.ari
struct Header {
  kind: i64,
}

struct Packet {
  header: Header,
  fragment: union by header.kind {
    text => i64,
    text => i64,
  },
}

fn main() -> i64 {
  return 0;
}
